Update Titanic Survival Prediction Data Set.ipynb

--- a/Titanic Survival Prediction Data Set.ipynb
+++ b/Titanic Survival Prediction Data Set.ipynb
@@ -6034,7 +6034,7 @@
     "| Decision Tree | 0.8237934904601572 | 0.79 |\n",
     "| Random Forest |0.8338945005611672 | 0.81 |\n",
     "| **Gradient Boosting Machine** | **0.9382716049382716** | **0.93**|\n",
-    "| Naive Bayes|0.7811447811447811|0.76?\n",
+    "| Naive Bayes|0.7811447811447811|0.76\n",
     "| Support Vector Machine | 0.7957351290684624 | 0.78 |"
    ]
   },
